--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
     </div>
     <div>
         <label for="favColor">Favorite Color:</label>
-        <select id="favColor" name="favColor" required>
+        <select id="favColor" type="color"name="favColor" required>
             <option value="red">Red</option>
             <option value="blue">Blue</option>
             <option value="green">Green</option>
