--- a/main.html
+++ b/main.html
@@ -20,12 +20,8 @@
     </div>
     <div>
         <label for="favColor">Favorite Color:</label>
-        <select id="favColor" type="color"name="favColor" required>
-            <option value="red">Red</option>
-            <option value="blue">Blue</option>
-            <option value="green">Green</option>
-            <option value="yellow">Yellow</option>
-        </select>
+        <input type="color" id="favColor" name="favColor" required>
+            
     </div>
     <div>
         <label for="likeness">How much you like your color:</label>
